@@ -12,9 +12,4 @@
 		 [joda-time/joda-time "2.1"]]
   :dev-dependencies [[lein-clojars "0.6.0"]]
   :aot [zenclient.java]
-  :jar-exclusions [#"\.DS_Store"]
-  :jvm-opts ["-XX:PermSize=128M"
-	     "-XX:MaxPermSize=256M"
-	     "-noverify"
-	     ~(format "-javaagent:%s/jrebel.jar"
-		      (System/getenv "JREBEL_HOME"))])
+  :jar-exclusions [#"\.DS_Store"])
